# metal-microbench

./: .gitignore  AGENTS.md  COMPATIBILITY.md  FLEX_ATTENTION_DESIGN.md  Makefile  README.md  bootstrap.swift  common.swift  dense_gemv.swift  ffi.swift  ffi_batch.swift  forward_graph.swift.monofile.bak  forward_ops.swift  gguf_loader.swift  gguf_tool.swift  harness.swift  kernel_capabilities.json  kernels.swift  kv_ssd_store.swift  kv_visualizer.swift  libgemma_metal.dylib.preref.bak  lm_engine.swift  lm_session.swift  main.swift  mem_mountain.swift  moe_matmul.swift  page_manager.swift  paged_attention.swift  probe_threadgroup_mem  probe_threadgroup_mem.swift  profile_ar_step.swift  profile_prefill.swift  profile_vision_tower  profile_vision_tower.swift  profile_vision_tower_main.swift  q4k_mma_bench  q4k_mma_bench.swift  radix_trie.swift  runtime.swift  test_cvec_cache.swift  (+9 more)
server/: README.md  bench_b_sweep.py  bench_b_sweep_results.jsonl  bridge.py  bridge_config.py  chat_template.py  config.toml  config.toml.bak  config.toml.preF16.bak  config.toml.preQ6K.bak  conversation_state.py  gemma_ffi.py  gemma_tool_call_parser.py  multi_stream_test.mjs  probe_oversubscription.py  probe_sustained_eval.py  pyproject.toml  serve.py  test_batch_ffi.py  test_batch_ffi_inbatch_share.py  test_batch_ffi_multimodal.py  test_batch_ffi_multiturn.py  test_batch_ffi_svg_shape.py  test_chat_template_prefix_continuity.py  test_chat_template_prefix_multimodal.py  test_consume_engine_stream.py  test_ffi_wire_validation.py  test_gemma_tool_call_parser.py  test_kv_eviction_guarantees.py  test_kv_no_connection_pinning.py  test_logit_bias.py  test_oversupply.py  test_prefix_cache_grand_slam.py  test_reconnect.py  test_reconnect_with_offset.py  test_unified_extensions.py
server/scripts/: bandwidth_probe.py  fetch-weights.py  smoke.py
server/static/: clients.html  compare.html  index.html  labeler.html  loom.html  steering.html
(+628 files in other folders)
