[project]
name = "gemma-metal-bridge"
version = "0.1.0"
description = "FastAPI bridge from OpenAI-compatible HTTP to the Swift Metal engine (libgemma_metal.dylib)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",            # chat_template.py (was undeclared until 2026-05-07)
    "pillow>=10.0",
    "numpy>=2.2.6",
    "huggingface_hub>=0.23",  # for scripts/fetch-weights.py
]

[tool.uv]
# Not a distributable package — just a venv for serve.py / scripts/*.py
# Explicitly false to silence uv's "skipping entry points" warning.
package = false
